# cook

./: .gitignore  .mcp.json  CONTRIBUTING.md  Cookfile  NOTICE  README.md  README.source  TODO.md  document.md
cli/: CHANGELOG.md  Cargo.toml  Cookfile
cli/.cargo/: config.toml
cli/crates/cook-cache/: Cargo.toml  build.rs
cli/crates/cook-cache/src/: backend.rs  cache_ctx.rs  check.rs  cloud_backend.rs  cloud_config.rs  context.rs  depfile.rs  lib.rs  manager.rs  store.rs  test_cache.rs
cli/crates/cook-cache/tests/: integration_cold_cc_sharing.rs  integration_config_toggle.rs  integration_cross_recipe_collision.rs  integration_declared_tools.rs  integration_discovered_inputs_restore.rs  integration_discovered_inputs_warmup.rs  integration_first_build_depfile.rs  integration_multi_output_restore.rs  integration_output_fidelity.rs  integration_outputs_glob_record.rs  integration_restore_on_hit.rs  integration_revert_restore.rs
cli/crates/cook-cli/: Cargo.toml
cli/crates/cook-cli/src/: cli.rs  cli_next.rs  cmd_logs.rs  color.rs  completion.rs  dag_data.rs  dag_server.rs  dag_viewer.html  diagnostics.rs  env.rs  error.rs  iso8601.rs  lib.rs  main.rs  pipeline.rs  progress.rs  test_output.rs  test_reporter.rs  test_state.rs  watcher.rs  workspace.rs
cli/crates/cook-cli/templates/: default-rocks-config.lua
cli/crates/cook-cli/tests/: affected_e2e.rs  cache_verify_e2e.rs  chore_dep_closure.rs  chore_params_test.rs  completion_test.rs  config_env_scope.rs  config_selection.rs  diagnostics_e2e.rs  directory_hopping_e2e.rs  file_ref_integration.rs  for_each_integration.rs  ingredient_glob_e2e.rs  init_subcommand_test.rs  list_subcommand_test.rs  lua_source_drift_test.rs  lua_test_body.rs  menu_subcommand_test.rs  module_recipe_dep_ref.rs  modules_integration.rs  package_chore_test.rs  probe_integration.rs  pull_integration.rs  runner_exit_codes.rs  surface_conformance.rs  test_runner_blocked.rs  test_runner_caching.rs  test_runner_filter.rs  test_runner_rerun_failed.rs  test_runner_workspace.rs  test_scope_no_silent_builds.rs  unit_timing_e2e.rs  vendor_completeness_test.rs  why_e2e.rs  worker_vm_api_integration.rs  workspace_of_one_equivalence.rs
cli/crates/cook-contracts/: Cargo.toml
cli/crates/cook-contracts/src/: lib.rs  member.rs  probe_value.rs
cli/crates/cook-dag/: Cargo.toml
cli/crates/cook-dag-viewer/: Cargo.toml
cli/crates/cook-dag-viewer/src/: dag_data.rs  dag_server.rs  dag_viewer.html  frame.rs  input.rs  lib.rs  state.rs  theme.rs  tui.rs  wave_grouper.rs
cli/crates/cook-dag-viewer/tests/: arrow_test.rs  compact_snapshots.rs  fixtures.rs  flow_snapshots.rs  tui_integration.rs
cli/crates/cook-dag/src/: lib.rs
cli/crates/cook-engine/: Cargo.toml
cli/crates/cook-engine/src/: analyzer.rs  cloud_config.rs  dag_builder.rs  executor.rs  id.rs  lib.rs  recipe_dag.rs  reconcile.rs  registered_workspace.rs  registry_entry.rs  run.rs  seal.rs  verify.rs  wave_grouper.rs  why.rs
cli/crates/cook-engine/tests/: cache_trust_cross_machine_e2e.rs  dep_order_e2e.rs  (+17 more)
cli/crates/cook-fingerprint/: Cargo.toml
cli/crates/cook-lang/: CONFORMANCE.md  Cargo.toml  README.md
cli/crates/cook-logs/: Cargo.toml
cli/crates/cook-lua-stdlib/: Cargo.toml
cli/crates/cook-luagen/: Cargo.toml
cli/crates/cook-luaotp/: Cargo.toml
cli/crates/cook-progress/: Cargo.toml
cli/crates/cook-register/: Cargo.toml
cli/crates/cook-xtask/: Cargo.toml
cli/e2e-fixtures/: README.md
cli/e2e-fixtures/cache_audit_first_token/: .gitignore  Cookfile  README.md
cli/e2e-fixtures/cache_benchmarks/: Cookfile  README.md
cli/e2e-fixtures/cache_benchmarks_sigil/: Cookfile  verify.sh
cli/e2e-fixtures/cache_dep_drift/: Cookfile  verify.sh
cli/e2e-fixtures/cache_portability/: Cookfile  src.txt
cli/e2e-fixtures/cache_revert_restore/: Cookfile  verify.sh
cli/e2e-fixtures/chore_param_benchmarks/: Cookfile
cli/e2e-fixtures/cli_audit_exit_codes/: Cookfile  walkthrough.sh
cli/e2e-fixtures/cross-recipe-deps/: Cookfile
cli/e2e-fixtures/cross_cookfile_chore/: Cookfile  walkthrough.sh
cli/e2e-fixtures/cross_cookfile_naming/: Cookfile  walkthrough.sh
cli/e2e-fixtures/cross_cookfile_plate/: Cookfile
cli/e2e-fixtures/engine_audit_auto_mkdir_outputs/: Cookfile  walkthrough.sh
cli/e2e-fixtures/for_each_benchmarks/: Cookfile  README.md  verify.sh
cli/e2e-fixtures/iteration_benchmarks/: Cookfile  README.md
cli/e2e-fixtures/lang_audit_lua_block_comment/: Cookfile
cli/e2e-fixtures/lang_audit_lua_multiline_string/: Cookfile  walkthrough.sh
cli/e2e-fixtures/lang_audit_shell_heredoc_brace/: walkthrough.sh
cli/e2e-fixtures/lua-expr-output/: Cookfile  verify.sh
cli/e2e-fixtures/luaotp_audit_path_traversal/: Cookfile.glob_outside  Cookfile.io_popen
cli/e2e-fixtures/monorepo_codegen/: README.md
cli/e2e-fixtures/monorepo_test/: Cookfile
cli/e2e-fixtures/multi-output/: .gitignore  fake-generator.sh
cli/e2e-fixtures/probe-basic/: Cookfile  README.md  main.c
cli/e2e-fixtures/probe-cache-share/: Cookfile  README.md  verify.sh
cli/e2e-fixtures/probe-chain/: Cookfile  README.md
cli/e2e-fixtures/register_audit_module_cycle/: Cookfile.cycle  Cookfile.memo  Cookfile.self
cli/e2e-fixtures/register_audit_sandbox_escape/: Cookfile.absolute  Cookfile.config  walkthrough.sh
cli/e2e-fixtures/test_benchmarks/: Cookfile  README.md  walkthrough.sh
cli/e2e-fixtures/test_caching/: Cookfile  README.md  walkthrough.sh
cli/e2e-fixtures/tool_identity_seal/: Cookfile  verify.sh
cli/e2e-fixtures/v04-chores/: Cookfile
tree-sitter-cook/: .gitignore  Cargo.toml  Cookfile  grammar.js  package.json  pnpm-lock.yaml  tree-sitter.json
tree-sitter-cook/bindings/rust/: build.rs  lib.rs
tree-sitter-cook/queries/: highlights.scm  injections.scm
tree-sitter-cook/scripts/: clean-stale-nvim-parsers.sh  conformance.mjs  install-nvim-queries.sh
tree-sitter-cook/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-cook/test/corpus/: body-termination.txt  chores.txt  cs_0022.txt  declarations.txt  placeholders.txt  plate-test-bodies.txt  probes.txt  recipes.txt  test_step.txt
(+1672 files in other folders)
