[workspace]
members = [
    "crates/cook-contracts",
    "crates/cook-lang",
    "crates/cook-progress",
    "crates/cook-cache",
    "crates/cook-fingerprint",
    "crates/cook-dag",
    "crates/cook-luagen",
    "crates/cook-lua-stdlib",
    "crates/cook-luaotp",
    "crates/cook-register",
    "crates/cook-engine",
    "crates/cook-dag-viewer",
    "crates/cook-cli",
    "crates/cook-xtask",
]
resolver = "2"
