[workspace]
members = [
    "crates/cook-contracts",
    "crates/cook-lang",
    "crates/cook-progress",
    "crates/cook-cache",
    "crates/cook-fingerprint",
    "crates/cook-dag",
    "crates/cook-luagen",
    "crates/cook-lua-stdlib",
    "crates/cook-luaotp",
    "crates/cook-register",
    "crates/cook-engine",
    "crates/cook-dag-viewer",
    "crates/cook-logs",
    "crates/cook-cli",
]
resolver = "2"

# Single source of truth for the released CLI version. `cook --version` reads
# this via CARGO_PKG_VERSION, and the release workflow refuses to build unless
# the pushed tag matches it — so a tag can never again ship a binary that
# self-reports a different version.
[workspace.package]
version = "0.7.0"
