[package]
name = "cook-cache"
version = "0.1.0"
edition = "2024"
description = "Build artifact caching for the Cook build system"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
which = "7"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
