[package]
name = "cook-cache"
version = "0.1.0"
edition = "2024"
description = "Build artifact cache backend for the Cook build system"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-fingerprint = { path = "../cook-fingerprint" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
