[package]
name = "cook-cli"
version = "0.1.0"
edition = "2021"
description = "User-facing binary for the Cook build system"

[[bin]]
name = "cook"
path = "src/main.rs"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-lang = { path = "../cook-lang" }
cook-luagen = { path = "../cook-luagen" }
cook-progress = { path = "../cook-progress" }
cook-cache = { path = "../cook-cache" }
cook-dag = { path = "../cook-dag" }
cook-register = { path = "../cook-register" }
cook-luaotp = { path = "../cook-luaotp" }
cook-engine = { path = "../cook-engine" }
cook-dag-viewer = { path = "../cook-dag-viewer", optional = true }

clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dotenvy = "0.15"
pathdiff = "0.2"
thiserror = "2"
glob = "0.3"

[features]
default = []
# Embeds the browser-based DAG viewer used by `cook --dag`. Pulls in the
# `cook-dag-viewer` crate (which carries `tiny_http`, `open`, and the embedded
# HTML asset). Off by default so vanilla `cook` builds stay slim and free of
# an HTTP-server dependency. CS-0047 documents the rationale.
viewer = ["dep:cook-dag-viewer"]

[dev-dependencies]
tempfile = "3"
