[package]
name = "cook-cli"
version.workspace = true
edition = "2021"
description = "User-facing binary for the Cook build system"

[[bin]]
name = "cook"
path = "src/main.rs"

[lib]
name = "cook_cli"
path = "src/lib.rs"

[dependencies]
# cook-cli is the thin CLI shell. Heavy lifting (parse, workspace, registry
# assembly, dep inference, execution) lives in cook-engine; cook-cli depends
# only on what it needs to render progress, watch files, and dispatch. Other
# crates are reached transitively through cook-engine's public API.
cook-lang = { path = "../cook-lang" }
cook-progress = { path = "../cook-progress" }
cook-engine = { path = "../cook-engine" }
cook-logs = { path = "../cook-logs" }
cook-dag-viewer = { path = "../cook-dag-viewer", optional = true }

# `string` lets runtime-discovered recipe names be injected as clap
# subcommands for completion; without it a subcommand name must be &'static str.
clap = { version = "4", features = ["derive", "string"] }
# Dynamic completion (one Rust implementation, every shell) lives behind
# `unstable-dynamic`, so the minor version is pinned: the feature is exempt
# from clap's semver guarantees and can change in a 4.x bump.
clap_complete = { version = "~4.6", features = ["unstable-dynamic"] }
notify = "7"
glob = "0.3"
globset = "0.4"
dirs = "5"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2"
base64 = "0.22"
sha2 = "0.10"

[features]
default = []
# Embeds the ratatui-based DAG terminal viewer used by `cook dag`. Pulls in
# the `cook-dag-viewer` crate (ratatui + crossterm). Off by default so
# vanilla `cook` builds stay slim. CS-0047 documents the rationale.
viewer = ["dep:cook-dag-viewer"]

[dev-dependencies]
tempfile = "3"
cargo_metadata = "0.18"
walkdir = "2"
serial_test = "3"
serde_json = "1"
