[package]
name = "cook-contracts"
version = "0.1.0"
edition = "2021"
description = "Shared kernel types for the Cook build system"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmpv = { version = "1.3", features = ["with-serde"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
