[package]
name = "cook-dag-viewer"
version = "0.1.0"
edition = "2021"
description = "Browser-based DAG viewer for the Cook build system"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-cache = { path = "../cook-cache" }
cook-engine = { path = "../cook-engine" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"
open = "5"
