[package]
name = "cook-dag-viewer"
version = "0.1.0"
edition = "2021"
description = "Terminal UI viewer for the Cook build DAG"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-cache = { path = "../cook-cache" }
cook-fingerprint = { path = "../cook-fingerprint" }
cook-engine = { path = "../cook-engine" }

ratatui = "0.30"
crossterm = "0.29"
nucleo-matcher = "0.3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
