[package]
name = "cook-engine"
version = "0.1.0"
edition = "2021"
description = "Build pipeline orchestrator for the Cook build system"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-lang = { path = "../cook-lang" }
cook-luagen = { path = "../cook-luagen" }
cook-register = { path = "../cook-register" }
cook-dag = { path = "../cook-dag" }
cook-luaotp = { path = "../cook-luaotp" }
cook-cache = { path = "../cook-cache" }
cook-fingerprint = { path = "../cook-fingerprint" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"
dirs = "5"
globset = "0.4"
dotenvy = "0.15"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
cook-contracts = { path = "../cook-contracts" }
cook-cache = { path = "../cook-cache" }
cook-fingerprint = { path = "../cook-fingerprint" }
serde_json = "1"
hex = "0.4"
