[package]
name = "cook-logs"
version.workspace = true
edition = "2021"
description = "Terminal UI viewer for Cook build logs"

[dependencies]
cook-progress = { path = "../cook-progress" }

base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
ansi-to-tui = "8"
unicode-width = "0.2"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
