[package]
name = "cook-luagen"
version = "0.1.0"
edition = "2021"
description = "Lua code generation from Cookfile AST"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-lang = { path = "../cook-lang" }
thiserror = "2"

# No dev-dependencies. The former `cook-engine` dev-dep was only used by the
# wave-grouper integration test removed in SHI-222 Phase 4 Task 4.4.
