[package]
name = "cook-luaotp"
version = "0.1.0"
edition = "2021"
description = "Worker pool with per-thread Lua VMs for the Cook build system"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-lua-stdlib = { path = "../cook-lua-stdlib" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
