[package]
name = "cook-progress"
version = "0.1.0"
edition = "2024"
description = "Terminal progress rendering with composable primitives"

[dependencies]
crossterm = "0.28"
indicatif = "0.17"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
