[package]
name = "cook-register"
version = "0.1.0"
edition = "2021"
description = "Capture-mode Lua VM for discovering work units from Cookfiles"

[dependencies]
cook-contracts = { path = "../cook-contracts" }
cook-cache = { path = "../cook-cache" }
cook-fingerprint = { path = "../cook-fingerprint" }
cook-lua-stdlib = { path = "../cook-lua-stdlib" }
cook-luagen = { path = "../cook-luagen" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
glob = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
cook-lang = { path = "../cook-lang" }
cook-luagen = { path = "../cook-luagen" }
