[package]
name = "cook-xtask"
version = "0.1.0"
edition = "2021"
description = "Cargo xtask helpers for the Cook workspace (packaging, release tooling)"

[[bin]]
name = "cook-xtask"
path = "src/main.rs"

[lib]
name = "cook_xtask"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
